String properties with TEXTEDIT_UPDATE option no longer update #110571

Closed
opened 2023-07-28 12:44:20 +02:00 by Damien Picard · 1 comment
Member

System Information
Operating system: Linux-6.2.0-26-generic-x86_64-with-glibc2.37 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.54.03

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-28 09:26, hash: 1f722a6d0194
Worked: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: c7fc78b81ecb

Short description of error
When declaring a StringProperty with the 'TEXTEDIT_UPDATE' option, its update function is supposed to run while typing in the string, but it does not.

Exact steps for others to reproduce the error

  • Go to the add-on user preferences
  • Start typing something in the addon_search field
  • The add-on list does not get shorter
  • Hit Return to confirm
  • The add-on list is now filtered.

Alternatively, run the following script, go to the scene properties, Test Update panel, and type something in the Test field. A message should print in the terminal on each input, but it only does when you confirm.
test_update.py

**System Information** Operating system: Linux-6.2.0-26-generic-x86_64-with-glibc2.37 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.54.03 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-28 09:26, hash: `1f722a6d0194` Worked: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: `c7fc78b81ecb` **Short description of error** When declaring a StringProperty with the 'TEXTEDIT_UPDATE' option, its update function is supposed to run while typing in the string, but it does not. **Exact steps for others to reproduce the error** - Go to the add-on user preferences - Start typing something in the addon_search field - The add-on list does not get shorter - Hit Return to confirm - The add-on list is now filtered. Alternatively, run the following script, go to the scene properties, Test Update panel, and type something in the Test field. A message should print in the terminal on each input, but it only does when you confirm. [test_update.py](/attachments/a9af5981-58d7-407a-8d37-89c02687792a)
Damien Picard added the
Type
Report
Status
Needs Triage
Priority
Normal
Module
Python API
labels 2023-07-28 12:44:21 +02:00
Iliya Katushenock added
Interest
Python API
and removed
Module
Python API
labels 2023-07-28 12:52:14 +02:00

I can confirm the problem.

It came up with 6fcecb7e46, but the bug was introduced in d154ebfa83 when using ENUM_OPERATORS with a max value smaller than enum PROP_TEXTEDIT_UPDATE.

I can confirm the problem. It came up with 6fcecb7e46, but the bug was introduced in d154ebfa83 when using `ENUM_OPERATORS` with a max value smaller than enum `PROP_TEXTEDIT_UPDATE`.
Germano Cavalcante self-assigned this 2023-07-28 22:45:44 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-28 22:52:17 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110571
No description provided.